Update website url

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ author:
   bio:
   location: "Bryan, OH"
   email:
-  uri: "https://gjack.github.io"
+  uri: "https://gabijack.com"
   bitbucket:
   codepen:
   dribbble:
